--- a/src/styles/tailwind.css
+++ b/src/styles/tailwind.css
@@ -1,3 +1,10 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+@layer base {
+    h2 {
+        @apply text-lg font-bold text-gray-900 dark:text-gray-100;
+    }
+}
