--- a/src/styles/tailwind.css
+++ b/src/styles/tailwind.css
@@ -7,6 +7,10 @@
     h2 {
         @apply text-lg font-bold text-gray-900 dark:text-gray-100;
     }
+    /* p, div {
+        @apply text-gray-950
+
+    } */
 }
 
 @layer components {
