--- a/src/styles/tailwind.css
+++ b/src/styles/tailwind.css
@@ -1,20 +1,23 @@
+/* src/assets/tailwind.css */
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
-
 @layer base {
-    h2 {
-        @apply text-lg font-bold text-gray-900 dark:text-gray-100;
-    }
-    /* p, div {
-        @apply text-gray-950
 
-    } */
+  h1, h2, h3, h4, h5, h6 {
+    @apply font-montserrat font-bold text-gray-900 dark:text-gray-100;
+  }
+  h2 {
+    @apply text-lg; /* Your existing h2 style, keeping text-lg */
+  }
+  p, div, span, a, button, input, label {
+    @apply font-lato text-gray-950 dark:text-gray-900;
+  }
 }
 
 @layer components {
-    .cartBtn {
-        @apply bg-white text-black rounded-lg mt-3 p-2 w-24 hover:bg-slate-950 hover:text-gray-50;
-    }
+  .cartBtn {
+    @apply bg-white text-black rounded-lg mt-3 p-2 w-24 hover:bg-slate-950 hover:text-gray-50 font-montserrat;
+  }
 }
